--- a/pom.xml
+++ b/pom.xml
@@ -5,31 +5,69 @@
     <artifactId>agdt-twitter</artifactId>
     <version>0.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    
+    <name>agdt-twitter</name>
+    <url>https://github.com/agdturner/agdt-twitter</url>
+    <description>A Java Library for processing web data.</description>
+    <scm>
+        <url>git@github.com:agdturner/agdt-twitter.git</url>
+        <connection>scm:git:git@github.com:agdturner/agdt-twitter.git</connection>
+        <developerConnection>scm:git:git@github.com:agdturner/agdt-twitter</developerConnection>
+    </scm>
+    <licenses>
+        <license>
+            <name>Apache License 2.0</name>
+            <url>https://github.com/agdturner/agdt-twitter/LICENSE.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+    <organization>
+        <name>Centre for Computational Geography</name>
+        <url>http://www.ccg.leeds.ac.uk/</url>
+    </organization>
+    <developers>
+        <developer>
+            <id>agdturner</id>
+            <name>Andy Turner</name>
+            <email>a.g.d.turner@leeds.ac.uk</email>
+            <organization>University of Leeds</organization>
+            <organizationUrl>http://www.leeds.ac.uk</organizationUrl>
+            <roles>
+                <role>developer</role>
+            </roles>
+        </developer>
+    </developers>
+    
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
-        <generic.version>1.0-SNAPSHOT</generic.version>
-        <agdtweb.version>0.1.0-SNAPSHOT</agdtweb.version>
+        <agdt-generic.version>1.0-SNAPSHOT</agdt-generic.version>
+        <agdt-web.version>0.1-SNAPSHOT</agdt-web.version>
+        <agdt-data.version>0.1-SNAPSHOT</agdt-data.version>
     </properties>
     
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.10</version>
-            <!--<version>3.8.1</version>-->
+            <version>4.12</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>uk.ac.leeds.ccg.andyt</groupId>
-            <artifactId>generic</artifactId>
-            <version>${generic.version}</version>
+            <artifactId>agdt-generic</artifactId>
+            <version>${agdt-generic.version}</version>
         </dependency>
         <dependency>
             <groupId>uk.ac.leeds.ccg.andyt</groupId>
             <artifactId>agdt-web</artifactId>
-            <version>${agdtweb.version}</version>
+            <version>${agdt-web.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>uk.ac.leeds.ccg.andyt</groupId>
+            <artifactId>agdt-data</artifactId>
+            <version>${agdt-data.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jsoup</groupId>
@@ -50,21 +88,20 @@
     
     <repositories>
         <repository>
-            <id>generic</id>
-            <name>GitHub agdturner generic Repository</name>
-            <url>https://github.com/agdturner/generic</url>
+            <id>agdt-generic</id>
+            <name>GitHub agdturner agdt-generic Repository</name>
+            <url>https://github.com/agdturner/agdt-generic</url>
         </repository>
         <repository>
-            <id>maven2-repository.dev.java.net</id>
-            <name>Java.net repository</name>
-            <url>http://download.java.net/maven/2</url>
+            <id>agdt-data</id>
+            <name>GitHub agdturner agdt-data Repository</name>
+            <url>https://github.com/agdturner/agdt-data</url>
         </repository>
-        <!--
         <repository>
-            <id>IroniaCorp</id>
-            <url>http://www.ironiacorp.com/repo/maven2</url>
+            <id>agdt-web</id>
+            <name>GitHub agdturner agdt-web Repository</name>
+            <url>https://github.com/agdturner/agdt-web</url>
         </repository>
-        -->
         <repository>
          <id>twitter4j.org</id>
          <name>twitter4j.org Repository</name>
