--- a/pom.xml
+++ b/pom.xml
@@ -2,22 +2,22 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>uk.ac.leeds.ccg.andyt</groupId>
-    <artifactId>agdt-twitter</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <artifactId>agdt-java-generic-data-Twitter</artifactId>
+    <version>0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     
-    <name>agdt-twitter</name>
-    <url>https://github.com/agdturner/agdt-twitter</url>
+    <name>agdt-java-generic-data-Twitter</name>
+    <url>https://github.com/agdturner/agdt-java-generic-data-Twitter</url>
     <description>A Java Library for processing web data.</description>
     <scm>
-        <url>git@github.com:agdturner/agdt-twitter.git</url>
-        <connection>scm:git:git@github.com:agdturner/agdt-twitter.git</connection>
-        <developerConnection>scm:git:git@github.com:agdturner/agdt-twitter</developerConnection>
+        <url>git@github.com:agdturner/agdt-java-generic-data-Twitter.git</url>
+        <connection>scm:git:git@github.com:agdturner/agdt-java-generic-data-Twitter.git</connection>
+        <developerConnection>scm:git:git@github.com:agdturner/agdt-java-generic-data-Twitter</developerConnection>
     </scm>
     <licenses>
         <license>
             <name>Apache License 2.0</name>
-            <url>https://github.com/agdturner/agdt-twitter/LICENSE.txt</url>
+            <url>https://github.com/agdturner/agdt-java-generic-data-Twitter/LICENSE.txt</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
@@ -40,11 +40,11 @@
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
-        <agdt-generic.version>1.0-SNAPSHOT</agdt-generic.version>
-        <agdt-web.version>0.1-SNAPSHOT</agdt-web.version>
-        <agdt-data.version>0.1-SNAPSHOT</agdt-data.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <agdt-java-generic.version>1.0.0</agdt-java-generic.version>
+        <agdt-java-generic-web.version>0.1-SNAPSHOT</agdt-java-generic-web.version>
+        <agdt-java-generic-data.version>0.1-SNAPSHOT</agdt-java-generic-data.version>
     </properties>
     
     <dependencies>
@@ -56,18 +56,18 @@
         </dependency>
         <dependency>
             <groupId>uk.ac.leeds.ccg.andyt</groupId>
-            <artifactId>agdt-generic</artifactId>
-            <version>${agdt-generic.version}</version>
+            <artifactId>agdt-java-generic</artifactId>
+            <version>${agdt-java-generic.version}</version>
         </dependency>
         <dependency>
             <groupId>uk.ac.leeds.ccg.andyt</groupId>
-            <artifactId>agdt-web</artifactId>
-            <version>${agdt-web.version}</version>
+            <artifactId>agdt-java-generic-web</artifactId>
+            <version>${agdt-java-generic-web.version}</version>
         </dependency>
         <dependency>
             <groupId>uk.ac.leeds.ccg.andyt</groupId>
-            <artifactId>agdt-data</artifactId>
-            <version>${agdt-data.version}</version>
+            <artifactId>agdt-java-generic-data</artifactId>
+            <version>${agdt-java-generic-data.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jsoup</groupId>
@@ -87,21 +87,6 @@
     </dependencies>
     
     <repositories>
-        <repository>
-            <id>agdt-generic</id>
-            <name>GitHub agdturner agdt-generic Repository</name>
-            <url>https://github.com/agdturner/agdt-generic</url>
-        </repository>
-        <repository>
-            <id>agdt-data</id>
-            <name>GitHub agdturner agdt-data Repository</name>
-            <url>https://github.com/agdturner/agdt-data</url>
-        </repository>
-        <repository>
-            <id>agdt-web</id>
-            <name>GitHub agdturner agdt-web Repository</name>
-            <url>https://github.com/agdturner/agdt-web</url>
-        </repository>
         <repository>
          <id>twitter4j.org</id>
          <name>twitter4j.org Repository</name>
@@ -159,4 +144,10 @@
         </repository>
     </distributionManagement>
     -->
+    <distributionManagement>
+        <repository>
+            <id>internal</id>
+            <url>file://${project.build.directory}/mvn-repo</url>
+        </repository>
+    </distributionManagement>
 </project>
